# fastapi-simple-social-media

./: README.md  main.py  pyproject.toml
app/: app.py  db.py  images.py  schema.py  users.py
