[project]
name = "fastapi-simple-social-media"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.137.2",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.7.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.49.0",
]
